syntax = "proto3";

option go_package = "v1";

import "google/api/annotations.proto";
import "api/v1/common.proto";

package v1;

message Metadata {
    string version = 1;
}

service MetadataService {

    rpc GetMetadata(Empty) returns (Metadata) {
        option (google.api.http) = {
            get: "/v1/metadata"
        };
    }

}